# selective_copy

./: .gitignore  LICENSE  README.md  cli.py  log.py  process.py  pyproject.toml  selective_copy.py  slcp.py  todo.txt
slcp/: __init__.py  __main__.py  cli.py  log.py  process.py  slcp.py
